--- a/qq.oauth.csrf.html
+++ b/qq.oauth.csrf.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-    <form action="http://graph.qq.com/oauth2.0/authorize" method="POST">
+    <form action="https://graph.qq.com/oauth2.0/authorize" method="POST">
 <input type="hidden" name="response_type" value="code" />
 <input type="hidden" name="client_id" value="100265387" />
 <input type="hidden" name="redirect_uri" value="http://www.bugscan.net/accounts/login/sns/qq" />
